chore: dev log - java lsp server ing